src/main/java/fr/m1comp5/Analyzer/mjj/MiniJaja.java
/* MiniJaja.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. MiniJaja.java */
package fr.m1comp5.Analyzer.mjj;
import java.io.FileReader;

public class MiniJaja/*@bgen(jjtree)*/implements MiniJajaTreeConstants, MiniJajaConstants {/*@bgen(jjtree)*/
  protected JJTMiniJajaState jjtree = new JJTMiniJajaState();public static MiniJaja getInstance(String filename)
    {
        FileReader reader = null;
        try
        {
            reader = new FileReader(filename);
        }
        catch (Exception e)
        {
            System.out.println(e.getMessage());
            return null;
        }
        return new MiniJaja(reader);
    }

  final public SimpleNode start() throws ParseException {/*@bgen(jjtree) root */
  ASTroot jjtn000 = new ASTroot(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      classe();
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final private void classe() throws ParseException {/*@bgen(jjtree) #classe( 3) */
  ASTclasse jjtn000 = new ASTclasse(JJTCLASSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      ident();
      jj_consume_token(LCBRACKET);
      decls();
      methmain();
      jj_consume_token(RCBRACKET);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  3);
      }
    }
}

  final private void ident() throws ParseException {/*@bgen(jjtree) ident */
                               ASTident jjtn000 = new ASTident(JJTIDENT);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
jjtn000.value = t.image;
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final private void decls() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:
    case INT:
    case BOOLEAN:
    case FINAL:{
      decl();
      decls1();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
ASTvnil jjtn001 = new ASTvnil(JJTVNIL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        empty();
      } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
    }
}

  final private void decls1() throws ParseException {
    jj_consume_token(SEMICOLON);
ASTdecls jjtn001 = new ASTdecls(JJTDECLS);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
    try {
      decls();
    } catch (Throwable jjte001) {
if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte001 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte001;}
                  }
                  if (jjte001 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte001;}
                  }
                  {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001,  2);
                  }
    }
}

  final private void decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:
    case INT:
    case BOOLEAN:{
      typemeth();
      ident();
      decl1();
      break;
      }
    case FINAL:{
      jj_consume_token(FINAL);
      type();
      ident();
ASTcst jjtn001 = new ASTcst(JJTCST);
                             boolean jjtc001 = true;
                             jjtree.openNodeScope(jjtn001);
      try {
        vexp();
      } catch (Throwable jjte001) {
if (jjtc001) {
                               jjtree.clearNodeScope(jjtn001);
                               jjtc001 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte001 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte001;}
                             }
                             if (jjte001 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte001;}
                             }
                             {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                               jjtree.closeNodeScope(jjtn001,  3);
                             }
      }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final private void decl1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAR:{
      jj_consume_token(LPAR);
      entetes();
      jj_consume_token(RPAR);
      jj_consume_token(LCBRACKET);
      vars();
      instrs();
ASTmethode jjtn001 = new ASTmethode(JJTMETHODE);
                                                          boolean jjtc001 = true;
                                                          jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RCBRACKET);
      } finally {
if (jjtc001) {
                                                            jjtree.closeNodeScope(jjtn001,  5);
                                                          }
      }
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      var1();
    }
}

  final private void vars() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:
    case INT:
    case BOOLEAN:
    case FINAL:{
      var();
      jj_consume_token(SEMICOLON);
ASTvars jjtn001 = new ASTvars(JJTVARS);
                        boolean jjtc001 = true;
                        jjtree.openNodeScope(jjtn001);
      try {
        vars();
      } catch (Throwable jjte001) {
if (jjtc001) {
                          jjtree.clearNodeScope(jjtn001);
                          jjtc001 = false;
                        } else {
                          jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException) {
                          {if (true) throw (RuntimeException)jjte001;}
                        }
                        if (jjte001 instanceof ParseException) {
                          {if (true) throw (ParseException)jjte001;}
                        }
                        {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                          jjtree.closeNodeScope(jjtn001,  2);
                        }
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
ASTvnil jjtn002 = new ASTvnil(JJTVNIL);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
      try {
        empty();
      } catch (Throwable jjte002) {
if (jjtc002) {
        jjtree.clearNodeScope(jjtn002);
        jjtc002 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte002 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte002;}
      }
      if (jjte002 instanceof ParseException) {
        {if (true) throw (ParseException)jjte002;}
      }
      {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
        jjtree.closeNodeScope(jjtn002, true);
      }
      }
    }
}

  final private void var() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:
    case INT:
    case BOOLEAN:{
      typemeth();
      ident();
      var1();
      break;
      }
    case FINAL:{
      jj_consume_token(FINAL);
      type();
      ident();
ASTcst jjtn001 = new ASTcst(JJTCST);
                             boolean jjtc001 = true;
                             jjtree.openNodeScope(jjtn001);
      try {
        vexp();
      } catch (Throwable jjte001) {
if (jjtc001) {
                               jjtree.clearNodeScope(jjtn001);
                               jjtc001 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte001 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte001;}
                             }
                             if (jjte001 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte001;}
                             }
                             {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                               jjtree.closeNodeScope(jjtn001,  3);
                             }
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final private void var1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACKET:{
      jj_consume_token(LBRACKET);
      exp();
ASTtableau jjtn001 = new ASTtableau(JJTTABLEAU);
                        boolean jjtc001 = true;
                        jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RBRACKET);
      } finally {
if (jjtc001) {
                          jjtree.closeNodeScope(jjtn001,  3);
                        }
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
ASTvar jjtn002 = new ASTvar(JJTVAR);
       boolean jjtc002 = true;
       jjtree.openNodeScope(jjtn002);
      try {
        vexp();
      } catch (Throwable jjte002) {
if (jjtc002) {
         jjtree.clearNodeScope(jjtn002);
         jjtc002 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte002 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte002;}
       }
       if (jjte002 instanceof ParseException) {
         {if (true) throw (ParseException)jjte002;}
       }
       {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
         jjtree.closeNodeScope(jjtn002,  3);
       }
      }
    }
}

  final private void vexp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      exp();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
ASTomega jjtn001 = new ASTomega(JJTOMEGA);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        empty();
      } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
    }
}

  final private void methmain() throws ParseException {/*@bgen(jjtree) #main( 2) */
  ASTmain jjtn000 = new ASTmain(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIN);
      jj_consume_token(LCBRACKET);
      vars();
      instrs();
      jj_consume_token(RCBRACKET);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000,  2);
      }
    }
}

  final private void entetes() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:{
      entete();
      entetes1();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
ASTenil jjtn001 = new ASTenil(JJTENIL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        empty();
      } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
    }
}

  final private void entetes1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
ASTentetes jjtn001 = new ASTentetes(JJTENTETES);
              boolean jjtc001 = true;
              jjtree.openNodeScope(jjtn001);
      try {
        entetes();
      } catch (Throwable jjte001) {
if (jjtc001) {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte001 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte001;}
              }
              if (jjte001 instanceof ParseException) {
                {if (true) throw (ParseException)jjte001;}
              }
              {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                jjtree.closeNodeScope(jjtn001,  2);
              }
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
ASTenil jjtn002 = new ASTenil(JJTENIL);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
      try {
        empty();
      } catch (Throwable jjte002) {
if (jjtc002) {
        jjtree.clearNodeScope(jjtn002);
        jjtc002 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte002 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte002;}
      }
      if (jjte002 instanceof ParseException) {
        {if (true) throw (ParseException)jjte002;}
      }
      {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
        jjtree.closeNodeScope(jjtn002, true);
      }
      }
    }
}

  final private void entete() throws ParseException {
    type();
ASTentete jjtn001 = new ASTentete(JJTENTETE);
             boolean jjtc001 = true;
             jjtree.openNodeScope(jjtn001);
    try {
      ident();
    } catch (Throwable jjte001) {
if (jjtc001) {
               jjtree.clearNodeScope(jjtn001);
               jjtc001 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte001 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte001;}
             }
             if (jjte001 instanceof ParseException) {
               {if (true) throw (ParseException)jjte001;}
             }
             {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
               jjtree.closeNodeScope(jjtn001,  2);
             }
    }
}

  final private void instrs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHILE:
    case RETURN:
    case WRITE:
    case WRITELN:
    case IF:
    case IDENTIFIER:{
      instr();
      instrs1();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
ASTinil jjtn001 = new ASTinil(JJTINIL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        empty();
      } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
    }
}

  final private void instrs1() throws ParseException {
    jj_consume_token(SEMICOLON);
ASTinstrs jjtn001 = new ASTinstrs(JJTINSTRS);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
    try {
      instrs();
    } catch (Throwable jjte001) {
if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte001 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte001;}
                  }
                  if (jjte001 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte001;}
                  }
                  {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001,  2);
                  }
    }
}

  final private void instr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      ident();
      instr2();
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
ASTretour jjtn001 = new ASTretour(JJTRETOUR);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
      try {
        exp();
      } catch (Throwable jjte001) {
if (jjtc001) {
                 jjtree.clearNodeScope(jjtn001);
                 jjtc001 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte001 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte001;}
               }
               if (jjte001 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte001;}
               }
               {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001, true);
               }
      }
      break;
      }
    case WRITE:{
      jj_consume_token(WRITE);
      jj_consume_token(LPAR);
      instr3();
ASTecrire jjtn002 = new ASTecrire(JJTECRIRE);
                              boolean jjtc002 = true;
                              jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(RPAR);
      } finally {
if (jjtc002) {
                                jjtree.closeNodeScope(jjtn002,  1);
                              }
      }
      break;
      }
    case WRITELN:{
      jj_consume_token(WRITELN);
      jj_consume_token(LPAR);
      instr3();
ASTecrireln jjtn003 = new ASTecrireln(JJTECRIRELN);
                                boolean jjtc003 = true;
                                jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(RPAR);
      } finally {
if (jjtc003) {
                                  jjtree.closeNodeScope(jjtn003,  1);
                                }
      }
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPAR);
      exp();
      jj_consume_token(RPAR);
      jj_consume_token(LCBRACKET);
      instrs();
      jj_consume_token(RCBRACKET);
ASTsi jjtn004 = new ASTsi(JJTSI);
                                                                boolean jjtc004 = true;
                                                                jjtree.openNodeScope(jjtn004);
      try {
        ELSE();
      } catch (Throwable jjte004) {
if (jjtc004) {
                                                                  jjtree.clearNodeScope(jjtn004);
                                                                  jjtc004 = false;
                                                                } else {
                                                                  jjtree.popNode();
                                                                }
                                                                if (jjte004 instanceof RuntimeException) {
                                                                  {if (true) throw (RuntimeException)jjte004;}
                                                                }
                                                                if (jjte004 instanceof ParseException) {
                                                                  {if (true) throw (ParseException)jjte004;}
                                                                }
                                                                {if (true) throw (Error)jjte004;}
      } finally {
if (jjtc004) {
                                                                  jjtree.closeNodeScope(jjtn004,  3);
                                                                }
      }
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAR);
      exp();
      jj_consume_token(RPAR);
      jj_consume_token(LCBRACKET);
      instrs();
ASTtantque jjtn005 = new ASTtantque(JJTTANTQUE);
                                                       boolean jjtc005 = true;
                                                       jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(RCBRACKET);
      } finally {
if (jjtc005) {
                                                         jjtree.closeNodeScope(jjtn005,  2);
                                                       }
      }
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final private void instr1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
ASTaffectation jjtn001 = new ASTaffectation(JJTAFFECTATION);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
      try {
        exp();
      } catch (Throwable jjte001) {
if (jjtc001) {
                 jjtree.clearNodeScope(jjtn001);
                 jjtc001 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte001 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte001;}
               }
               if (jjte001 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte001;}
               }
               {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001,  2);
               }
      }
      break;
      }
    case ASSIGN_INCREMENT:{
      jj_consume_token(ASSIGN_INCREMENT);
ASTsomme jjtn002 = new ASTsomme(JJTSOMME);
                         boolean jjtc002 = true;
                         jjtree.openNodeScope(jjtn002);
      try {
        exp();
      } catch (Throwable jjte002) {
if (jjtc002) {
                           jjtree.clearNodeScope(jjtn002);
                           jjtc002 = false;
                         } else {
                           jjtree.popNode();
                         }
                         if (jjte002 instanceof RuntimeException) {
                           {if (true) throw (RuntimeException)jjte002;}
                         }
                         if (jjte002 instanceof ParseException) {
                           {if (true) throw (ParseException)jjte002;}
                         }
                         {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
                           jjtree.closeNodeScope(jjtn002,  2);
                         }
      }
      break;
      }
    case INCREMENT:{
ASTincrement jjtn003 = new ASTincrement(JJTINCREMENT);
      boolean jjtc003 = true;
      jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(INCREMENT);
      } finally {
if (jjtc003) {
        jjtree.closeNodeScope(jjtn003,  1);
      }
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final private void instr2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAR:{
      jj_consume_token(LPAR);
      listexp();
ASTappelI jjtn001 = new ASTappelI(JJTAPPELI);
                       boolean jjtc001 = true;
                       jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RPAR);
      } finally {
if (jjtc001) {
                         jjtree.closeNodeScope(jjtn001,  2);
                       }
      }
      break;
      }
    case INCREMENT:
    case ASSIGN_INCREMENT:
    case ASSIGN:
    case LBRACKET:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACKET:{
        ident2();
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      instr1();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final private void instr3() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      ident();
      break;
      }
    case STRING:{
      chaine();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final private void ELSE() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      jj_consume_token(LCBRACKET);
      instrs();
      jj_consume_token(RCBRACKET);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
ASTinil jjtn001 = new ASTinil(JJTINIL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        empty();
      } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
    }
}
